; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/input/keyboard/extr_ep93xx_keypad.c_ep93xx_keypad_build_keycode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/input/keyboard/extr_ep93xx_keypad.c_ep93xx_keypad_build_keycode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ep93xx_keypad = type { i32*, %struct.input_dev*, %struct.ep93xx_keypad_platform_data* }
%struct.input_dev = type { i32 }
%struct.ep93xx_keypad_platform_data = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ep93xx_keypad*)* @ep93xx_keypad_build_keycode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ep93xx_keypad_build_keycode(%struct.ep93xx_keypad* %0) #0 {
  %2 = alloca %struct.ep93xx_keypad*, align 8
  %3 = alloca %struct.ep93xx_keypad_platform_data*, align 8
  %4 = alloca %struct.input_dev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.ep93xx_keypad* %0, %struct.ep93xx_keypad** %2, align 8
  %10 = load %struct.ep93xx_keypad*, %struct.ep93xx_keypad** %2, align 8
  %11 = getelementptr inbounds %struct.ep93xx_keypad, %struct.ep93xx_keypad* %10, i32 0, i32 2
  %12 = load %struct.ep93xx_keypad_platform_data*, %struct.ep93xx_keypad_platform_data** %11, align 8
  store %struct.ep93xx_keypad_platform_data* %12, %struct.ep93xx_keypad_platform_data** %3, align 8
  %13 = load %struct.ep93xx_keypad*, %struct.ep93xx_keypad** %2, align 8
  %14 = getelementptr inbounds %struct.ep93xx_keypad, %struct.ep93xx_keypad* %13, i32 0, i32 1
  %15 = load %struct.input_dev*, %struct.input_dev** %14, align 8
  store %struct.input_dev* %15, %struct.input_dev** %4, align 8
  store i32 0, i32* %5, align 4
  br label %16

16:                                               ; preds = %53, %1
  %17 = load i32, i32* %5, align 4
  %18 = load %struct.ep93xx_keypad_platform_data*, %struct.ep93xx_keypad_platform_data** %3, align 8
  %19 = getelementptr inbounds %struct.ep93xx_keypad_platform_data, %struct.ep93xx_keypad_platform_data* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = icmp slt i32 %17, %20
  br i1 %21, label %22, label %56

22:                                               ; preds = %16
  %23 = load %struct.ep93xx_keypad_platform_data*, %struct.ep93xx_keypad_platform_data** %3, align 8
  %24 = getelementptr inbounds %struct.ep93xx_keypad_platform_data, %struct.ep93xx_keypad_platform_data* %23, i32 0, i32 1
  %25 = load i32*, i32** %24, align 8
  %26 = load i32, i32* %5, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i32, i32* %25, i64 %27
  %29 = load i32, i32* %28, align 4
  store i32 %29, i32* %6, align 4
  %30 = load i32, i32* %6, align 4
  %31 = lshr i32 %30, 28
  %32 = and i32 %31, 15
  store i32 %32, i32* %7, align 4
  %33 = load i32, i32* %6, align 4
  %34 = lshr i32 %33, 24
  %35 = and i32 %34, 15
  store i32 %35, i32* %8, align 4
  %36 = load i32, i32* %6, align 4
  %37 = and i32 %36, 16777215
  store i32 %37, i32* %9, align 4
  %38 = load i32, i32* %9, align 4
  %39 = load %struct.ep93xx_keypad*, %struct.ep93xx_keypad** %2, align 8
  %40 = getelementptr inbounds %struct.ep93xx_keypad, %struct.ep93xx_keypad* %39, i32 0, i32 0
  %41 = load i32*, i32** %40, align 8
  %42 = load i32, i32* %7, align 4
  %43 = shl i32 %42, 3
  %44 = load i32, i32* %8, align 4
  %45 = add nsw i32 %43, %44
  %46 = sext i32 %45 to i64
  %47 = getelementptr inbounds i32, i32* %41, i64 %46
  store i32 %38, i32* %47, align 4
  %48 = load i32, i32* %9, align 4
  %49 = load %struct.input_dev*, %struct.input_dev** %4, align 8
  %50 = getelementptr inbounds %struct.input_dev, %struct.input_dev* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = call i32 @__set_bit(i32 %48, i32 %51)
  br label %53

53:                                               ; preds = %22
  %54 = load i32, i32* %5, align 4
  %55 = add nsw i32 %54, 1
  store i32 %55, i32* %5, align 4
  br label %16

56:                                               ; preds = %16
  ret void
}

declare dso_local i32 @__set_bit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
